// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Basic Lifecycle renders as expected 1`] = `
<Component
  hardwareAccelerated={true}
  onRequestClose={[Function]}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  transparent={true}
  visible={false}
>
  <AnimatedComponent
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": -750,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 750,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      />
    </TouchableWithoutFeedback>
    <View
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "#333438",
            "borderRadius": 3,
            "overflow": "hidden",
            "position": "absolute",
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.8,
            "shadowRadius": 2,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
              Object {
                "scale": 0,
              },
              Object {
                "perspective": 1000,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "height": 200,
              "width": 200,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Hi
          </Text>
        </View>
      </AnimatedComponent>
    </View>
  </AnimatedComponent>
</Component>
`;

exports[`Test Basic Lifecycle renders as expected 2`] = `
<Component
  hardwareAccelerated={true}
  onRequestClose={[Function]}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  transparent={true}
  visible={true}
>
  <AnimatedComponent
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": -750,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableWithoutFeedback
      onPress={[Function]}
    >
      <AnimatedComponent
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 750,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
          }
        }
      />
    </TouchableWithoutFeedback>
    <View
      style={
        Object {
          "left": 0,
          "top": 0,
        }
      }
    >
      <AnimatedComponent
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "borderBottomColor": "#333438",
            "borderRadius": 3,
            "overflow": "hidden",
            "position": "absolute",
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.8,
            "shadowRadius": 2,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
              Object {
                "scale": 0,
              },
              Object {
                "perspective": 1000,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "height": 200,
              "width": 200,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Hi
          </Text>
        </View>
      </AnimatedComponent>
    </View>
  </AnimatedComponent>
</Component>
`;

exports[`Test Basic Lifecycle renders as expected 3`] = `
<AnimatedComponent
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "left": -750,
      "opacity": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <AnimatedComponent
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 750,
          "top": 0,
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
        }
      }
    />
  </TouchableWithoutFeedback>
  <View
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
  >
    <AnimatedComponent
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "white",
          "borderBottomColor": "#333438",
          "borderRadius": 3,
          "overflow": "hidden",
          "position": "absolute",
          "shadowColor": "black",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.8,
          "shadowRadius": 2,
          "transform": Array [
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
            Object {
              "scale": 0,
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Hi
        </Text>
      </View>
    </AnimatedComponent>
  </View>
</AnimatedComponent>
`;
